PMD fixes draft