@@ -23,19 +23,18 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.util.HashMap;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
+import java.util.Map;
 
 import javax.sound.midi.MidiDevice;
 import javax.sound.midi.spi.MidiDeviceProvider;
 
-
 import org.apache.log4j.Logger;
 
 import com.github.osxmidi4j.midiservices.CoreMidiLibrary;
-import com.github.osxmidi4j.midiservices.MIDINotification;
 import com.github.osxmidi4j.midiservices.CoreMidiLibrary.MIDINotifyProc;
+import com.github.osxmidi4j.midiservices.MIDINotification;
 import com.sun.jna.NativeLong;
 import com.sun.jna.Pointer;
 
@@ -46,31 +45,40 @@ public class CoreMidiDeviceProvider extends MidiDeviceProvider {
     public static final String DEVICE_NAME_PREFIX = "CoreMidi - ";
 
     private static final int DEVICE_MAP_SIZE = 20;
-    private static MidiClient client = null;
-    private static MidiOutputPort output;
-    private static HashMap<Integer, MidiDevice> deviceMap =
-            new LinkedHashMap<Integer, MidiDevice>(DEVICE_MAP_SIZE);
-    private static MIDINotifyProc notifyProc;
+
+    private static final MidiProperties PROPS = new MidiProperties();
+
+    private static final class MidiProperties {
+        private MidiClient client;
+        private MidiOutputPort output;
+        private final Map<Integer, MidiDevice> deviceMap =
+                new LinkedHashMap<Integer, MidiDevice>(DEVICE_MAP_SIZE);
+        private MIDINotifyProc notifyProc;
+    }
+
     private static final Logger LOG = Logger
             .getLogger(CoreMidiDeviceProvider.class);
 
     public CoreMidiDeviceProvider() throws CoreMidiException {
+        super();
         if (!isMac()) {
             return;
         }
         synchronized (LOG) {
-            if (client == null) {
+            if (PROPS.client == null) {
                 try {
                     initRococoa();
-                    notifyProc = new NotificationReciever();
-                    client = new MidiClient("CAProvider", notifyProc);
-                    output =
-                            client.outputPortCreate("CAMidiDeviceProvider Output");
+                    PROPS.notifyProc = new NotificationReciever();
+                    PROPS.client =
+                            new MidiClient("CAProvider", PROPS.notifyProc);
+                    PROPS.output =
+                            PROPS.client
+                                    .outputPortCreate("CAMidiDeviceProvider Output");
                     buildDeviceMap();
-                } catch (CoreMidiException e) {
+                } catch (final CoreMidiException e) {
                     LOG.warn(e.getMessage(), e);
                     throw e;
-                } catch (Exception e) {
+                } catch (final Exception e) {
                     LOG.warn(e.getMessage(), e);
                 }
             }
@@ -95,7 +103,7 @@ public class CoreMidiDeviceProvider extends MidiDeviceProvider {
                 new BufferedOutputStream(new FileOutputStream(libfile));
 
         int len = 0;
-        byte[] buffer = new byte[BUFFER_SIZE];
+        final byte[] buffer = new byte[BUFFER_SIZE];
         while ((len = in.read(buffer)) > -1) {
             out.write(buffer, 0, len);
         }
@@ -106,104 +114,103 @@ public class CoreMidiDeviceProvider extends MidiDeviceProvider {
     }
 
     final boolean isMac() {
-        String os = System.getProperty("os.name").toLowerCase();
+        final String os = System.getProperty("os.name").toLowerCase();
         return (os.indexOf("mac") >= 0);
     }
 
-    public MidiDevice getDevice(MidiDevice.Info info) {
+    public MidiDevice getDevice(final MidiDevice.Info info) {
         if (!isDeviceSupported(info)) {
             throw new IllegalArgumentException();
         }
 
-        CoreMidiDeviceInfo cainfo = (CoreMidiDeviceInfo) info;
-        return (MidiDevice) deviceMap.get(cainfo.getUniqueID());
+        final CoreMidiDeviceInfo cainfo = (CoreMidiDeviceInfo) info;
+        return (MidiDevice) PROPS.deviceMap.get(cainfo.getUniqueID());
     }
 
     public MidiDevice.Info[] getDeviceInfo() {
-        if (deviceMap == null) {
+        if (PROPS.deviceMap == null) {
             return new MidiDevice.Info[0];
         }
-        MidiDevice.Info[] info = new MidiDevice.Info[deviceMap.size()];
-        Iterator<MidiDevice> it = deviceMap.values().iterator();
+        final MidiDevice.Info[] info =
+                new MidiDevice.Info[PROPS.deviceMap.size()];
+        final Iterator<MidiDevice> it = PROPS.deviceMap.values().iterator();
 
         int counter = 0;
         while (it.hasNext()) {
-            MidiDevice i = it.next();
+            final MidiDevice i = it.next();
             info[counter++] = (CoreMidiDeviceInfo) i.getDeviceInfo();
         }
 
         return info;
     }
 
-    public boolean isDeviceSupported(MidiDevice.Info info) {
-        if (deviceMap == null || info == null) {
-            return false;
-        }
-
-        if (info instanceof CoreMidiDeviceInfo) {
-            CoreMidiDeviceInfo cainfo = (CoreMidiDeviceInfo) info;
-            if (deviceMap.containsKey(cainfo.getUniqueID())) {
-                return true;
+    public boolean isDeviceSupported(final MidiDevice.Info info) {
+        boolean foundDevice = false;
+        if (PROPS.deviceMap != null && info instanceof CoreMidiDeviceInfo) {
+            final CoreMidiDeviceInfo cainfo = (CoreMidiDeviceInfo) info;
+            if (PROPS.deviceMap.containsKey(cainfo.getUniqueID())) {
+                foundDevice = true;
             }
         }
-        return false;
+
+        return foundDevice;
     }
 
     static MidiClient getMIDIClient() throws CoreMidiException {
-        if (client == null) {
+        if (PROPS.client == null) {
             new CoreMidiDeviceProvider();
         }
-        return client;
+        return PROPS.client;
     }
 
     static MidiOutputPort getOutputPort() {
-        return output;
+        return PROPS.output;
     }
 
     private void buildDeviceMap() throws CoreMidiException {
         int count =
                 CoreMidiLibrary.INSTANCE.MIDIGetNumberOfSources().intValue();
         for (int source = 0; source < count; source++) {
-            NativeLong endpointRef =
+            final NativeLong endpointRef =
                     CoreMidiLibrary.INSTANCE.MIDIGetSource(new NativeLong(
                             source));
-            MidiEndpoint ep = new MidiEndpoint(endpointRef);
-            Integer uid =
-                    new Integer(
-                            ep.getProperty(CoreMidiLibrary.kMIDIPropertyUniqueID));
+            final MidiEndpoint ep = new MidiEndpoint(endpointRef);
+            final Integer uid =
+                    Integer.valueOf(ep
+                            .getProperty(CoreMidiLibrary.kMIDIPropertyUniqueID));
 
-            if (!deviceMap.containsKey(uid)) {
-                deviceMap.put(uid, new CoreMidiSource(ep, uid));
+            if (!PROPS.deviceMap.containsKey(uid)) {
+                PROPS.deviceMap.put(uid, new CoreMidiSource(ep, uid));
             }
         }
         count =
                 CoreMidiLibrary.INSTANCE.MIDIGetNumberOfDestinations()
                         .intValue();
         for (int dest = 0; dest < count; dest++) {
-            NativeLong endpointRef =
+            final NativeLong endpointRef =
                     CoreMidiLibrary.INSTANCE.MIDIGetDestination(new NativeLong(
                             dest));
-            MidiEndpoint ep = new MidiEndpoint(endpointRef);
-            Integer uid =
-                    new Integer(
-                            ep.getProperty(CoreMidiLibrary.kMIDIPropertyUniqueID));
+            final MidiEndpoint ep = new MidiEndpoint(endpointRef);
+            final Integer uid =
+                    Integer.valueOf(ep
+                            .getProperty(CoreMidiLibrary.kMIDIPropertyUniqueID));
 
-            if (!deviceMap.containsKey(uid)) {
-                deviceMap.put(uid, new CoreMidiDestination(ep, uid));
+            if (!PROPS.deviceMap.containsKey(uid)) {
+                PROPS.deviceMap.put(uid, new CoreMidiDestination(ep, uid));
             }
         }
     }
 
     private class NotificationReciever implements MIDINotifyProc {
         @Override
-        public void apply(MIDINotification message, Pointer refCon) {
+        public void apply(final MIDINotification message, final Pointer refCon) {
             switch (message.getMessageID()) {
             case CoreMidiLibrary.kMIDIMsgObjectAdded:
             case CoreMidiLibrary.kMIDIMsgObjectRemoved:
-                deviceMap.clear();
+                PROPS.deviceMap.clear();
                 try {
                     buildDeviceMap();
-                } catch (CoreMidiException e) {
+                } catch (final CoreMidiException e) {
                     LOG.warn(e.getMessage(), e);
                 }
                 break;
@@ -215,18 +222,18 @@ public class CoreMidiDeviceProvider extends MidiDeviceProvider {
     }
 
     MidiClient getClient() {
-        return client;
+        return PROPS.client;
     }
 
     MidiOutputPort getOutput() {
-        return output;
+        return PROPS.output;
     }
 
-    HashMap<Integer, MidiDevice> getDeviceMap() {
-        return deviceMap;
+    Map<Integer, MidiDevice> getDeviceMap() {
+        return PROPS.deviceMap;
     }
 
     MIDINotifyProc getNproc() {
-        return notifyProc;
+        return PROPS.notifyProc;
     }
 }
